Integrate front with backend (#14)
* Fix ts compilation errors

* Connect with recipies controller

* Add project subside

* Add private routes

* User now can change personal informations
